update description and keywords

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="Amsterdam Lindy Exchange is an annual lindy hop swing dance event in the city center of Amsterdam with live bands.">
+    <meta name="keywords" content="swing dance, lindy hop, jazz music, partner dance, weekend, exchange, ALX, Amsterdam, jazz">
     <meta name="author" content="Amsterdam Lindy Exchange">
     <title>Amsterdam Lindy Exchange</title>
     <!-- Mobile Specific Metas
