updated intro text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <meta name="description" content="Amsterdam Lindy Exchange is an annual lindy hop swing dance event in the city center of Amsterdam with live bands.">
+    <meta name="description" content="Amsterdam Lindy Exchange is an annual lindy hop swing dance event in the city center of Amsterdam with live bands in the weekend of the 28th to 30th of September 2018.">
     <meta name="keywords" content="swing dance, lindy hop, jazz music, partner dance, weekend, exchange, ALX, Amsterdam, jazz">
     <meta name="author" content="Amsterdam Lindy Exchange">
     <title>Amsterdam Lindy Exchange</title>
@@ -41,6 +41,10 @@
         <p>In the meantime follow us on
             <a href="https://www.facebook.com/amsterdamlindyexchange/" title="Like us on Facebook">Facebook</a> &
             <a href="https://www.instagram.com/amsterdamlindy/" title="Follow us on Instagram">Instagram</a>!</p>
+    </div>
+    <div class="row info about">
+        <p>Amsterdam Lindy Exchange is an annual lindy hop swing dance event in the city center of Amsterdam with
+            live bands. The first edition will be in the weekend of the 28th to 30th of September 2018. We hope to see you there!</p>
     </div>
     <div class="row footer">
         <div class="social-link">
