--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         gtag('js', new Date());
         gtag('config', 'UA-114909441-1');
     </script>
+
+    <!-- Mailchimp
+          –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script id="mcjs">
+        !function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(
+        document,"script","https://chimpstatic.com/mcjs-connected/js/users/ede0a55ea36adc8f20b1575ef/9cd55fafb54dfa0db2919045d.js");
+    </script>
 </head>
 <body>
 <!-- Primary Page Layout
@@ -52,6 +59,28 @@
             <a href="https://www.facebook.com/amsterdamlindyexchange/" title="Like us on Facebook">Facebook</a> &
             <a href="https://www.instagram.com/amsterdamlindy/" title="Follow us on Instagram">Instagram</a>!</p>
     </div>
+    <div class="row footer">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+            #mc_embed_signup{width:100%;}
+            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+            <form action="https://amsterdamlindyexchange.us12.list-manage.com/subscribe/post?u=ede0a55ea36adc8f20b1575ef&amp;id=9a8013785e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <label for="mce-EMAIL">Or subscribe to our mailing list</label>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ede0a55ea36adc8f20b1575ef_9a8013785e" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+    </div>
     <div class="row info about">
         <p>Amsterdam Lindy Exchange is an annual lindy hop swing dance event in the city center of Amsterdam with
             live bands. The first edition will be in the weekend of the 28th to 30th of September 2018. We hope to see you there!</p>
@@ -68,6 +97,7 @@
             </a>
         </div>
     </div>
+
 </div>
 </body>
 </html>
